components/1-actual/base/.tekton/build-webhook-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    build.appstudio.openshift.io/application: actual
    build.appstudio.openshift.io/build: "true"
    build.appstudio.openshift.io/component: 1-actual
    build.appstudio.openshift.io/type: build
    build.appstudio.openshift.io/version: "0.1"
    pipelines.appstudio.openshift.io/type: build
  creationTimestamp: null
  name: el1-actual
  namespace: shebert
spec:
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-1-actual
    weight: null
status: {}
